fixed new view on mobile to use application layouts for nav and header

--- a/app/assets/stylesheets/entries_phone.scss
+++ b/app/assets/stylesheets/entries_phone.scss
@@ -164,7 +164,6 @@ Entry Form
 }
 
 #titles_mobile #click_to_upload {
-  float: left;
 }
 
 #titles_mobile .fa-camera {
@@ -567,7 +566,6 @@ New Entry Form
 }
 
 #new_title_form #click_to_upload {
-  float: left;
   margin: 1rem;
   width: 100%;
 }
